--- a/src/style/reportes.css
+++ b/src/style/reportes.css
@@ -5,8 +5,8 @@
   background-color: #f0eeee;
   overflow-x: hidden;
   overflow-y: scroll;
-  /* scrollbar-width: none; */
-  z-index: 400;
+  scrollbar-width: none;
+  z-index: 500;
   top: 50%;
   border-top-left-radius: 50px;
   border-top-right-radius: 50px;
@@ -38,6 +38,7 @@
   height: fit-content;
   margin-bottom: 20px;
   position: static;
+  background-color: #f0eeee;
 }
 .data-completa{
   display: flex;
@@ -50,6 +51,7 @@
   width: 50%;
   border: 0;
   cursor: pointer;
+  background: transparent;
 }
 .data{
   margin-left: 2%;
