Arregle el scroll de los reportes y hice el nuevo metodo pa agregar escuelas y estoy probando si funciona

--- a/src/style/mapa.css
+++ b/src/style/mapa.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   user-select: none;
+  cursor: default;
   /* overflow-y: hidden;
   overflow-x: hidden; */
 }
@@ -17,6 +18,10 @@
   border-top-right-radius: 50px;
   border-bottom-right-radius: 50px;
   cursor: pointer;
+}
+.rotado {
+  transform: rotate(180deg);
+  transition: transform 150ms ease; 
 }
 .btn-specs:hover{
   background-color: gray;
